--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ include_directories("${PROJECT_SOURCE_DIR}/include/")
 
 add_library(
 	${PROJECT_NAME}
+	src/gif.cpp
 	src/settings.cpp
 	src/pixel.cpp
 	src/frame.cpp
@@ -31,3 +32,4 @@ macro(add_animation arg)
 endmacro(add_animation)
 
 add_animation(test1)
+add_animation(test2)
